# familybond-agent

./: .env.example  .gitignore  AGENTS.md  README.md  agent.py  pyproject.toml  server.py  storage.py
data/: family_context.json  health_logs.json  recent_updates.json  translation_logs.json
skills/clarify-for-elder/: SKILL.md
skills/parse-health-checkin/: SKILL.md
skills/summarize-life-update/: SKILL.md
